tests/snapshots/regression/semantic_types__runtime_boundaries__annotation_mismatch_error.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/semantic_types/runtime_boundaries/annotation_mismatch_error.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 1 error • tests/fixtures/semantic_types/runtime_boundaries/annotation_mismatch_error.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `inc`.

  tests/fixtures/semantic_types/runtime_boundaries/annotation_mismatch_error.flx:4:9
  |
1 | fn inc(x: Int) -> Int { x + 1 }
  | --------------------- `inc` expects `Int` as the 1st parameter
2 | 
3 | fn main() {
4 |     inc("oops")
  |         ^^^^^^
  |         ------ this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
